# gofer

./: .env.example  .gitignore  PLAN.md  README.md  com.datashaman.gofer.plist  com.datashaman.jira-agent.plist  config.example.yaml  config.yaml  pyproject.toml
.claude/: CLAUDE.md
completions/: gofer.bash
src/gofer/: approval.py  batch.py  config.py  dispatcher.py  events.py  gate.py  jira_client.py  main.py  poller.py  progress.py  repo_resolver.py  repo_selector.py  session.py  slack_client.py  worktree.py
src/gofer/handlers/: comment.py  mention.py  ticket_work.py
src/jira_agent/: approval.py  config.py  dispatcher.py  events.py  gate.py  main.py  models.py  poller.py  repo_resolver.py  session.py  slack_client.py  worktree.py
src/jira_agent/handlers/: __init__.py  comment.py  mention.py  ticket_work.py
